# intervals

./: README.txt  intervals.cabal  stack.yaml
app/: Main.hs
src/: Interval.hs
test/: testdata.txt  testdata2.txt
